ready for release

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,5 +2,8 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
 index.file=index.php
-run.as=LOCAL
-url=http://localhost/SKEstate/
+remote.connection=envisioDevs-4251e2
+remote.directory=/skestate
+remote.upload=ON_RUN
+run.as=REMOTE
+url=http://54.173.65.38/SKEstate/
